<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="100px"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/gm_value_mileage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/values_textsize"
	        android:textColor="#FFF"
	        android:text="@string/instant_mileage" />
        
        <TextView
	        android:id="@+id/gm_value_instantfuel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50px"
	        android:textSize="@dimen/values_textsize"
	        android:textColor="#FFF"
	        android:text="@string/instant_fuel" />
        
        <TextView
	        android:id="@+id/gm_value_totalmileage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50px"
	        android:textSize="@dimen/values_textsize"
	        android:textColor="#FFF"
	        android:text="@string/accum_mileage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/gm_value_avgfuel1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/values_textsize"
	        android:textColor="#FFF"
	        android:text="@string/saic_averagefuel1" />
        
        <TextView
	        android:id="@+id/gm_value_avgfuel2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50px"
	        android:textSize="@dimen/values_textsize"
	        android:textColor="#FFF"
	        android:text="@string/saic_averagefuel2" />
        
        <TextView
	        android:id="@+id/gm_value_avgfuel3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50px"
	        android:textSize="@dimen/values_textsize"
	        android:textColor="#FFF"
	        android:text="@string/saic_averagefuel3" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/gm_value_littlemileage1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="@dimen/values_textsize"
	        android:text="@string/little_mileage1" />
        
        <TextView
	        android:id="@+id/gm_value_littlemileage2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50px"
	        android:textColor="#FFF"
	        android:textSize="@dimen/values_textsize"
	        android:text="@string/little_mileage2" />
        
        
        <TextView
	        android:id="@+id/gm_value_littlemileage3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50px"
	        android:textColor="#FFF"
	        android:textSize="@dimen/values_textsize"
	        android:text="@string/little_mileage3" />
    </LinearLayout>

</LinearLayout>