<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">
    
    <LinearLayout 
        android:id="@+id/rl_saic_leftimg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_vertical|right"
        android:paddingRight="10dp">
       	<ImageView 
       	    android:contentDescription="@string/app_name"
       	    android:src="@drawable/img_instant_fuel"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"/>
       	<ImageView 
       	    android:contentDescription="@string/app_name"
            android:src="@drawable/img_instant_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/rl_saic_lefttext"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="6dp">
       <TextView 
           	android:id="@+id/tv_trip1_averageFuel1"
           	android:gravity="center_vertical"
           	android:layout_weight="1"
         	android:text="@string/saic_averagefuel1"
         	android:textSize="@dimen/values_textsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <TextView 
           android:id="@+id/tv_trip1_averageFuel2"
           	android:gravity="center_vertical"
           	android:layout_weight="1"
         	android:text="@string/saic_averagefuel2"
         	android:textSize="@dimen/values_textsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal">
        <LinearLayout 
        android:id="@+id/rl_saic_rightimg"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingRight="10dp">
       <ImageView 
           android:contentDescription="@string/app_name"
           	android:layout_weight="1"
          	android:src="@drawable/img_instant_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <ImageView 
           android:contentDescription="@string/app_name"
           	android:layout_weight="1"
          	android:src="@drawable/img_accum_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
     <LinearLayout 
        android:id="@+id/rl_saic_righttext"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="6dp">
        <TextView 
            android:id="@+id/tv_trip1_averageFuel3"
            android:gravity="center_vertical"
           	android:text="@string/saic_averagefuel3"
           	android:textSize="@dimen/values_textsize"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView 
            android:id="@+id/tv_trip1_mileage"
            android:gravity="center_vertical"
            android:layout_weight="1"
           	android:text="@string/accum_mileage"
           	android:textSize="@dimen/values_textsize"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>
    </LinearLayout>
    </LinearLayout>
     
</LinearLayout>
